<resources>
    <string name="app_name">SplitWise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">
    651911712682-3q7obpsn20dg9ev0cbvqpv3p2lfnqo5s.apps.googleusercontent.com
</string>
    <string name="add_expense">Add expense</string>
    <string name="non_group_expenses">Non-group expenses</string>
    <string name="settled_up">settled up</string>
    <string name="start_a_new_group">Start a new group</string>
    <string name="background">background</string>
    <string name="back_button">back_button</string>
    <string name="settings" />
    <string name="settle_up">Settle up</string>
    <string name="balances">Balances</string>
    <string name="you_re_the_only_one_here">You\'re the only one here!</string>
    <string name="add_group_members">Add group members</string>
    <string name="no_expense_here_yet">No expense here yet.</string>
    <string name="add_an_expense_to_get_this_party_started">Add an expense to get this party started.</string>
    <string name="expense_image">expense_Image</string>
    <string name="groupimage">groupImage</string>
    <string name="group_name">Group name</string>
    <string name="type">Type</string>
    <string name="trip">Trip</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="add_trip_dates">Add trip dates</string>
    <string name="splitwise_will_remind_friends_to_join_add_expenses_and_settle_up">Splitwise will remind friends to join, add expenses, and settle up.</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="couple">Couple</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full name</string>
    <string name="edit_name">Edit</string>
    <string name="email_address">Email address</string>
    <string name="edit_mail">Edit</string>
    <string name="add_new_email_address">Add new Email address</string>
    <string name="your_current_password">Your current password</string>
    <string name="phone_number">Phone number</string>
    <string name="none">None</string>
    <string name="edit_phone">Edit</string>
    <string name="password">Password</string>
    <string name="edit_password">Edit</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="save_changes">Save changes</string>
    <string name="recent_activity">Recent activity</string>
    <string name="view_all_activity">View all activity</string>
    <string name="with_you_and">With you and:</string>
    <string name="expense_desc">expense_desc</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="pkr">PKR</string>
    <string name="_0_00">0.00</string>
    <string name="paid_by">Paid by</string>
    <string name="you">You</string>
    <string name="and_split">and split</string>
    <string name="split_type">Split Type</string>
    <string name="paid_by_you_and_split_equally">Paid by you and split equally.</string>
    <string name="name">Name</string>
    <string name="phone_number_or_email_address">Phone number or email address</string>
    <string name="next">Next</string>
    <string name="splitwise_logo">splitwise_logo</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="splitwise">Splitwise</string>
    <string name="split_equally">Split equally</string>
    <string name="select_which_people_owe_an_equal_share">Select which people owe an equal share.</string>
    <string name="_0_00_person">0.00/person</string>
    <string name="all">All</string>
    <string name="more_options">More options</string>
    <string name="no_expense_here_yet_2">No expense here yet.</string>
    <string name="add_an_expense_to_get_this_party_started_2">Add an expense to get this party started</string>
    <string name="friend_img">friend_img</string>
    <string name="settle_up_friend">Settle up</string>
    <string name="reminder_friend">Reminder</string>
    <string name="all_expenses_before_this_date_have_been_settled_up_tap_to_show_settled_expenses">All expenses before this date have been settled up. Tap to show settled expenses.</string>
    <string name="shared_groups">Shared groups</string>
    <string name="manage_relationship">Manage relationship</string>
    <string name="remove_from_friends_list">Remove from friends list</string>
    <string name="remove_this_user_from_your_friends_list">Remove this user from your friends list.</string>
    <string name="block_user">Block user</string>
    <string name="remove_this_user_from_your_friends_list_hide_any_groups_you_share_and_suppress_future_expenses_notifications_from_them">Remove this user from your friends list, hide any groups you share, and suppress future expenses/notifications from them.</string>
    <string name="add_more_friends">Add more friends</string>
    <string name="group_setting_img">group_setting_img</string>
    <string name="edit_group">edit_group</string>
    <string name="group_members">Group members</string>
    <string name="add_people_to_group">Add people to group</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="leave_group">Leave group</string>
    <string name="delete_group">Delete group</string>
    <string name="multiple_people">Multiple people</string>
    <string name="split_by_percentage">Split by percentage</string>
    <string name="enter_the_percentage_split_that_s_fair_for_your_situation">Enter the percentage split that\'s fair for your situation.</string>
    <string name="next_record_payment">Next</string>
    <string name="settle_all_balances">Settle all balances</string>
    <string name="or_settle_a_specific_group_balance">Or, settle a specific group balance</string>
    <string name="split_by_exact_amounts">Split by exact amounts</string>
    <string name="specify_exactly_how_much_each_person_owes">Specify exactly how much each person owes.</string>
    <string name="settle_up_inner_balance">Settle up</string>
    <string name="reminder_inner_balance">Reminder</string>
    <string name="no_expense">no expense</string>
    <string name="rs">Rs</string>
    <string name="_0_00_2">0.00</string>
    <string name="percentage">%</string>
    <string name="rs_3">Rs</string>
    <string name="_0_00_3">0.00</string>
    <string name="selected">Selected</string>
    <string name="welcome_to_splitwise">Welcome to Splitwise!</string>
    <string name="let_s_create_your_account">Let\'s create your account</string>
    <string name="full_name_signup">Full name</string>
    <string name="email_address_singup">Email address</string>
    <string name="password_signup">Password</string>
    <string name="done">Done</string>
    <string name="i_use_pkr_as_my_currency">I use PKR as my currency</string>
    <string name="log_in_2">Log in</string>
    <string name="log_in_3">Log In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password_3">Password</string>
    <string name="email_3">Email</string>
    <string name="reset_you_password">Reset you password</string>
    <string name="enter_you_email_address_and_we_ll_send_you_a_link_to_reset_you_password">Enter you email address and we\'ll send you a link to reset you password</string>
    <string name="your_email_address">Your email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_4">Email</string>
</resources>