<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.fragments.friendFragment.FriendDetailFragment">
    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="@color/green"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/friendDetailBackIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />
        <ImageView
            android:id="@+id/friendDetailSettingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings_24dp_e3e3e3_fill0_wght400_grad0_opsz24" />
    </FrameLayout>
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="@drawable/circle_white"
        android:contentDescription="@string/friend_img"
        android:padding="20dp"
        android:src="@drawable/ic_mail"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:tint="#737373" />
    <TextView
        android:id="@+id/friendDetailName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="2"
        android:text=""
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendDetailName" />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/detailFriendChipsGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">
        <com.google.android.material.chip.Chip
            android:id="@+id/friendDetailSettleUpChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="@string/settle_up_friend"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:chipCornerRadius="30dp"
            app:chipEndPadding="8dp"
            app:chipStartPadding="8dp"
            app:chipStrokeColor="#363636"
            app:chipStrokeWidth="2dp" />
        <com.google.android.material.chip.Chip
            android:id="@+id/remindFriendChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="@string/reminder_friend"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:chipCornerRadius="30dp"
            app:chipEndPadding="8dp"
            app:chipStartPadding="8dp"
            app:chipStrokeColor="#363636"
            app:chipStrokeWidth="2dp" />
    </com.google.android.material.chip.ChipGroup>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendDetailRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailFriendChipsGroup" />
    <TextView
        android:id="@+id/friendDetailSettleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/all_expenses_before_this_date_have_been_settled_up_tap_to_show_settled_expenses"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailFriendChipsGroup" />
    <LinearLayout
        android:id="@+id/noExpenseLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailFriendChipsGroup">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/no_expense_here_yet_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_an_expense_to_get_this_party_started_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>