<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/createGroupToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_cancel"
        app:title="Create a group"
        app:titleTextColor="@color/white"
        app:menu="@menu/create_group_menu"
        app:theme="@style/CreateGroupToolbarTheme" />
    <ImageView
        android:id="@+id/groupImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text_bg"
        android:contentDescription="@string/groupimage"
        android:padding="20dp"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createGroupToolbar" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/group_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/groupNameEditText"
        app:layout_constraintStart_toEndOf="@+id/groupImage"
        app:layout_constraintTop_toTopOf="@+id/groupImage" />
    <EditText
        android:id="@+id/groupNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/green"
        android:cursorVisible="true"
        android:focusable="true"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/cursor_green"
        app:layout_constraintBottom_toBottomOf="@+id/groupImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/groupImage"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/type"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupImage" />
    <TextView
        android:id="@+id/TripChip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/edit_text_bg"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/trip"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableTopCompat="@drawable/ic_trip"
        app:layout_constraintEnd_toStartOf="@+id/homeChip"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <TextView
        android:id="@+id/coupleChip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/edit_text_bg"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/couple"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableTopCompat="@drawable/ic_fav"
        app:layout_constraintBottom_toBottomOf="@+id/homeChip"
        app:layout_constraintEnd_toStartOf="@+id/otherChip"
        app:layout_constraintStart_toEndOf="@+id/homeChip"
        app:layout_constraintTop_toTopOf="@+id/homeChip" />
    <TextView
        android:id="@+id/homeChip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/edit_text_bg"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableTopCompat="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="@+id/TripChip"
        app:layout_constraintEnd_toStartOf="@+id/coupleChip"
        app:layout_constraintStart_toEndOf="@+id/TripChip"
        app:layout_constraintTop_toTopOf="@+id/TripChip" />
    <TextView
        android:id="@+id/otherChip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_bg"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/other"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableTint="@color/white"
        app:drawableTopCompat="@drawable/ic_recipt"
        app:layout_constraintBottom_toBottomOf="@+id/coupleChip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coupleChip"
        app:layout_constraintTop_toTopOf="@+id/coupleChip" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addTripSwitchCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeChip">
        <TextView
            android:id="@+id/addTripDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/add_trip_dates"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/addTripDateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="#2A2A2A" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/splitwise_will_remind_friends_to_join_add_expenses_and_settle_up"
            android:textColor="#838282"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTripDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addTripDatesCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTripSwitchCL">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/end"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingEnd="10dp"
            app:boxBackgroundMode="none"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:endIconTint="#BDBDBD"
            app:layout_constraintBottom_toBottomOf="@+id/endEditText"
            app:layout_constraintEnd_toStartOf="@+id/endEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/endEditText"
            tools:ignore="RtlSymmetry">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startEditTextTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bottom_line"
                android:clickable="true"
                android:focusable="true"
                android:paddingEnd="48dp"
                android:textColor="@color/white"
                android:textColorHint="#7D7D7D"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundMode="none"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:endIconTint="#BDBDBD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startEditText"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endEditTextTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bottom_line"
                android:clickable="true"
                android:focusable="true"
                android:paddingEnd="48dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>